# litres_autotest_project

./: .env.bstack  .env.local_emulator  README.md  mobile_config.py  pyproject.toml  pytest.ini
data/: books.py  users.py
litres/api/: auth.py  basket.py
litres/api/schemas/: schemas.py
litres/api_helpers/: auth.py  basket.py
litres/pages/mobile_pages/: favorite_page.py  profile_page.py  search_result_page.py
litres/pages/web_pages/: main_page.py
litres/ui/: helper_methods.py
litres/ui/mobile_pages/: main_page.py
litres/ui/web_pages/: book_page.py  main_page.py
model/api_helpers/: auth.py  basket.py  favorite.py  get_from_result.py  helpers.py
model/pages/: book_page.py  main_page.py  profile_page.py  search_page.py
model/pages/mobile_pages/: book_page.py  favorite_page.py  main_page.py  profile_page.py  (+1 more)
model/schemas/: schemas.py
tests/: conftest.py  test_adding_book_to_basket.py  test_authorization.py  test_book_search.py  test_logout.py  test_removing_book_from_basket.py
tests/api_tests/: test_adding_book_to_basket.py  test_adding_book_to_favorite.py  test_authorization.py  test_basket_status.py  test_removing_book_from_basket.py  test_removing_book_from_favorite.py
tests/mobile_tests/: conftest.py  test_adding_book_to_favorite.py  test_changing_language.py  test_mobile.py  test_search_book.py
tests/web_tests/: conftest.py  test_adding_book_to_basket.py  test_authorization.py  test_book_search.py  test_logout.py  test_removing_book_from_basket.py
utils/: api_request_with_attach.py  mobile_attach.py  paths.py  tools.py  web_attach.py
(+1 files in other folders)
